@@ -12,7 +12,7 @@ copyright_holder = Christopher J. Madsen
 [ManifestSkip]
 [MetaYAML]
 [License]
-[CompileTests]
+[=tools::CompileTests]
 [PodSyntaxTests]
 [PodCoverageTests]
 [ExtraTests]
